examples/test/testpolicy14787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14787
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key48: value19
      key29: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value5
          key23: value24
      podSelector:
        matchLabels:
          key27: value16
          key14: value46
          key35: value46
